[package]
name = "dioxus-markdown"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
rust-web-markdown = { git = "https://github.com/rambip/rust-web-markdown/" }

[features]
debug = ["rust-web-markdown/debug"]

[workspace]
members = [
    "examples/*"
]
